moved showMoves into functions folder

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+.move-button {
+  margin: 0 0.12rem 0 0;
+  padding: 0 0.12rem;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
