--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
-/* button:focus {
+button:focus {
   outline: 0;
-} */
+}
 
 button:active {
   position: relative;
   top: 1px;
+}
+
+.move {
+  padding: 0 2px;
 }
 
 .move-button {
